--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
         path: ../src/Controller/
-        namespace: OHMedia\ContactBundle\Controller
+        namespace: OHMedia\LocationBundle\Controller
     type: attribute
