--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,8 +3,8 @@ services:
         autowire: true
         autoconfigure: true
 
-    OHMedia\ContactBundle\:
+    OHMedia\LocationBundle\:
         resource: '../src/'
         exclude:
             - '../src/Entity/'
-            - '../src/OHMediaContactBundle.php'
+            - '../src/OHMediaLocationBundle.php'
